fix: align blog content

--- a/src/styles/blog-content-blocks.scss
+++ b/src/styles/blog-content-blocks.scss
@@ -3,6 +3,6 @@
 
   & > .gatsby-image-wrapper {
     margin: $spacing-medium auto;
-    width: 60vw;
+    width: 75%;
   }
 }
