--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -349,16 +349,6 @@ h2.section-title:after {
 }
 /*/ Sidebar /*/
 
-/** Page Contents **/
-.post-content ~ .entry-media {
-  margin-bottom: 20px;
-}
-
-.post-content .business-content {
-  margin-top: 20px;
-}
-/*/ Page Contents /*/
-
 .contact-page .main-content {
   background-color: $color-dark;
 }
